--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Lato&family=Satisfy&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
